changed font to Titillium

--- a/app/assets/themes/bioart/stylesheets/posts.css.scss
+++ b/app/assets/themes/bioart/stylesheets/posts.css.scss
@@ -141,7 +141,7 @@
       padding: 1.5rem 0 2.5rem 0;
       .side_link {
         float: left;
-      
+        font-family: $titillium;
         margin-bottom: 1em;
         background-color: #000;
         background: #fff url(/assets/bioart/images/layout/menubar_arrow_blk.png) 0.4em no-repeat;
