remove custom images

--- a/app/views/themes/bioart/admin/projects/_form.html.haml
+++ b/app/views/themes/bioart/admin/projects/_form.html.haml
@@ -28,12 +28,19 @@
   .small-10.medium-6.columns
     - if f.object.custom_background_image?
       =image_tag f.object.custom_background_image.url
+      %label
+        = f.check_box :remove_custom_background_image
+        Remove custom header/footer background image
     = f.input :custom_background_image, label: 'Custom background image for header/footer'
+    
   .small-10.medium-6.columns
     - if f.object.custom_body_background_image?
       =image_tag f.object.custom_body_background_image.url
+      %label
+        = f.check_box :remove_custom_body_background_image
+        Remove custom body background image
     = f.input :custom_body_background_image, label: 'Custom background image for body'
-    
+
   .small-10.medium-6.columns
     = f.input :ongoing, as: :boolean    
   .small-10.medium-6.columns
