main page changes

--- a/app/views/themes/bioart/home/_ars_bioarctica.html.haml
+++ b/app/views/themes/bioart/home/_ars_bioarctica.html.haml
@@ -6,9 +6,13 @@
         Bioarctica
   .row
     .small-10.columns.medium-11.small-centered
-      .ars_image
-        = image_tag @ars.image.url
+      - if @ars.image?
+        .ars_image
+          = image_tag @ars.image.url
       .ars_content
         = raw @ars.body
-        .side_links
-          .side_link= link_to 'Apply to the residency', '#'
+        - if @ars.project
+          - unless @calls.empty?
+            - @calls.each do |call|
+              %p
+                .side_link= link_to call.name, call
