--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -32,6 +32,9 @@ header {
         }
         &.search {
           width: 20%;
+          @include breakpoint(small only) {
+            width: 40%;
+          }
           form {
 
             input[type=text] {
@@ -42,8 +45,10 @@ header {
               border: none;
               padding-left: 20px;
               background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center  #66ffcc;
-              &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; }
-              &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; } 
+              &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; 
+               
+              }
+              &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;} 
               &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
               &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
               
