--- a/app/views/themes/bioart/shared/_project_menu.html.haml
+++ b/app/views/themes/bioart/shared/_project_menu.html.haml
@@ -11,9 +11,9 @@
     - next if page.is_project_overview == true
     %li
       = link_to page.title, project_page_path(@project, page), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == page || @page.descendant_of?(page)) ? :active : false]
-      - unless page.children.empty?
+      - unless page.children.delete_if{|x| x.hide_from_menu == true }.empty?
         %ul.menu
-          - page.children.each do |pp|
+          - page.children.delete_if{|x| x.hide_from_menu == true }.each do |pp|
             %li= link_to pp.title, project_page_path(@project, pp), class: [(controller.controller_name == 'pages' || controller.controller_name == 'posts') && @page && (@page == pp || @page.descendant_of?(pp)) ? :active : false]
 / - if @page
 /   - unless @page.children.empty? && @page.depth == 0
