--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -8,7 +8,7 @@ header {
     max-height: 11.25em;
     padding: 3.125em 0;
     @include breakpoint(small only) {
-        padding: 3.125em 0 0;
+        padding: 0.25rem 0 0;
       }
     a {
       .logo {
@@ -109,7 +109,10 @@ header {
       font-size: 4.424em;
       @include breakpoint(small only) {
         font-size: 3.4em;
-        padding: 2.24rem 0;
+        font-size: 10vw;
+        line-height: 110%;
+        margin-left: 0;
+        padding: 1.24rem 0;
       }
       span.white {
         color: #FFF;
