--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -13,6 +13,8 @@
     font-size: 4.375rem;
     @include breakpoint(small only) {
       font-size: 3.4em;
+      font-size: 12vw;
+      line-height: 100%;
       padding: 2.24rem 0;
     }
     span.featured {
@@ -177,20 +179,35 @@
   h1.project_title {
     font-family: $rubik;
     font-size: 5.75rem;
+    @include breakpoint(small only) {
+      font-size: 13vw;
+      line-height: 100%;
+    }
     a {
       color: #000;
     }
     span.years {
       font-size: 1.8rem;
+      @include breakpoint(small only) {
+        font-size: 7vw;
+        line-height: 100%;
+      }
     }
   }
   h3.project_subtitle {
     font-size: 2.875rem;
+    @include breakpoint(small only) {
+      font-size: 10vw;
+      line-height: 100%;
+    }
     font-family: $rubik;
   }
   
   .project_indented {
     margin-left: 2.75rem;
+    @include breakpoint(small only) {
+      margin-left: 0;
+    }
   }
   .text_box {
     opacity: 0.9;
@@ -211,6 +228,10 @@
       margin: -2.5rem 5rem 0rem 3.25rem;
       color: #FFF;
       font-size: 3.5rem;
+      @include breakpoint(small only) {
+        font-size: 8vw;
+        line-height: 100%;
+      }
       clear: left;
       line-height: 1em;
       padding: 1rem 1.5rem;
@@ -266,6 +287,10 @@
   .blog_container, .collaborators_container {
     
     .red {
+      @include breakpoint(small only) {
+        font-size: 8vw;
+        line-height: 100%;
+      }
       background-color: $red;
       font-family: $rubik;
       float: left;
