--- a/app/views/themes/bioart/home/_whatsnew.html.haml
+++ b/app/views/themes/bioart/home/_whatsnew.html.haml
@@ -40,6 +40,15 @@
                 slidesToShow: 1,
                 slidesToScroll: 1
               }
+          },
+            {
+              breakpoint: 959,
+              settings: {
+                autoplay: true,
+                autoplaySpeed: 3000,
+                slidesToShow: 2,
+                slidesToScroll: 2
+              }
           }
         ]
       });;
