--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -8,8 +8,11 @@ header {
     max-height: 11.25em;
     padding: 3.125em 0;
     @include breakpoint(small only) {
-        padding: 0.25rem 0 0;
-      }
+      padding: 0.25rem 0 0;
+    }
+    @include breakpoint(medium only) {
+      padding: 0.25rem 0 0;
+    }
     a {
       .logo {
         font-family: $rubik;
@@ -21,6 +24,9 @@ header {
     }
     ul.menu {
       padding: 2.1em 0 0 0;
+      @include breakpoint(medium only) {
+        padding: 0;
+      }
       @include breakpoint(small only) {
         padding: 0;
       }
