--- a/app/assets/themes/bioart/stylesheets/homepage.css.scss
+++ b/app/assets/themes/bioart/stylesheets/homepage.css.scss
@@ -53,7 +53,7 @@
     }
     @include breakpoint(medium only) {
       font-size: 3.4em;
-      font-size: 10vw;
+      font-size: 8vw;
       line-height: 110%;
       padding: 2rem 0;
     }
@@ -110,6 +110,12 @@
       font-size: 3.4rem;
       font-size: 13vw;
       line-height: 4.15rem;
+      margin: 2.8rem 0;
+    }
+    @include breakpoint(medium only) {
+      font-size: 3.4em;
+      font-size: 8vw;
+      line-height: 110%;
       margin: 2.8rem 0;
     }
     text-transform: uppercase;
@@ -205,6 +211,12 @@
       line-height: 4.15rem;
       padding: 0 0 1rem 0;
     }
+    @include breakpoint(medium only) {
+      font-size: 3.4em;
+      font-size: 8vw;
+      line-height: 110%;
+      padding: 2rem 0;
+    }
     span.white {
       color: #FFF;
     }
@@ -279,6 +291,12 @@
       line-height: 4.15rem;
       font-size: 13vw;
       padding: 0 0 1rem 0;
+    }
+    @include breakpoint(medium only) {
+      font-size: 3.4em;
+      font-size: 8vw;
+      line-height: 110%;
+      padding: 2rem 0;
     }
     span.featured {
       color: #FFF;
