pull up page children

--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -359,6 +359,7 @@
   }
   .page_children {
     a.page {
+      margin-top: -2.5rem;
       .page_image {
         overflow: hidden;
         padding-bottom: 100%;
