pull up page children

--- a/app/views/themes/bioart/projects/show.html.haml
+++ b/app/views/themes/bioart/projects/show.html.haml
@@ -97,9 +97,9 @@
                     .title= child.title
                     .excerpt
                       - if child.excerpt.blank?
-                        = truncate_html(sanitize(child.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
+                        = raw truncate_html(sanitize(child.body, tags: %w{b strong bold i italic em u underline br}), length: 150)
                       - else
-                        = raw sanitize(page.excerpt, tags: %w{b strong bold i p italic em u underline br})
+                        = raw truncate_html(sanitize(page.excerpt, tags: %w{b strong bold i p italic em u underline br}), length: 150)
                       
                     
       / - unless @project.partners.empty?
