--- a/app/views/themes/bioart/home/_projects.html.haml
+++ b/app/views/themes/bioart/home/_projects.html.haml
@@ -7,6 +7,7 @@
   .row
     .small-10.columns.medium-11.small-centered
       - @projects.each do |project|
+        - next if project.slug == 'ars-bioarctica'
         .row.project[project]
           .small-12.medium-2.project_icon.columns
             = image_tag project.image.url(:box)
