--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -31,6 +31,7 @@ header {
         padding: 0;
       }
       li {  
+        vertical-align: bottom;
         @include breakpoint(small only) {
           display: inline;
           float: left;
