--- a/app/assets/themes/bioart/stylesheets/homepage.css.scss
+++ b/app/assets/themes/bioart/stylesheets/homepage.css.scss
@@ -37,7 +37,9 @@
 
 .whats_new {
   background: #f7f7f6 url(/assets/bioart/images/layout/grey_dots_small.png) repeat;
-  
+  &.green {
+    background: $headerblue url(/assets/bioart/images/layout/green_dots_small.png) repeat;
+  }
   .section_title {
     padding: 4.24rem 0;
     font-family: $rubik;
@@ -98,6 +100,13 @@
         font-size: 1rem;
         line-height: 1.25em;
         color: #000;
+      }
+      .activity_metadata {
+        font-family: $titillium;
+        font-size: 0.8em;
+        line-height: 1.1em;
+        color: #666;
+        margin-top: 1.2rem;
       }
     }
   }
