--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -50,6 +50,7 @@ header {
               box-shadow: none;
               font-family: $titillium;
               border: none;
+              height: 2.75rem;
               padding-left: 20px;
               background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center  #66ffcc;
               &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; 
