--- a/app/views/themes/bioart/admin/frontitems/_form.html.haml
+++ b/app/views/themes/bioart/admin/frontitems/_form.html.haml
@@ -41,9 +41,9 @@
     .large-4.columns
       = f.input :published, as: :boolean
     .large-4.columns
-      = f.input :no_text
+      = f.input :no_text, as: :boolean
     .large-4.columns
-      = f.input :dont_scale
+      = f.input :dont_scale, as: :boolean
     .actions
       = f.submit 'Save'
 
