--- a/app/views/themes/bioart/admin/frontitems/_form.html.haml
+++ b/app/views/themes/bioart/admin/frontitems/_form.html.haml
@@ -44,7 +44,8 @@
       = f.input :no_text, as: :boolean
     .large-4.columns
       = f.input :dont_scale, as: :boolean
-    .actions
+  .row
+    .large-4.columns.actions
       = f.submit 'Save'
 
 = content_for :jquery do
