--- a/app/views/themes/bioart/admin/frontitems/_form.html.haml
+++ b/app/views/themes/bioart/admin/frontitems/_form.html.haml
@@ -1,5 +1,5 @@
-.row.expanded
-  = semantic_form_for [:admin, @frontitem], html: {multipart: true} do |f|
+= semantic_form_for [:admin, @frontitem], html: {multipart: true} do |f|
+  .row.expanded
     - if @frontitem.errors.any?
       #error_explanation
         %h2= "#{pluralize(@frontitem.errors.count, "error")} prohibited this frontitem from being saved:"
@@ -46,7 +46,7 @@
       = f.input :dont_scale, as: :boolean
   .row
     .large-4.columns.actions
-      = f.submit 'Save'
+      = f.submit 'Save', class: [:button, :small]
 
 = content_for :jquery do
   :plain
