--- a/app/views/themes/bioart/posts/index.html.haml
+++ b/app/views/themes/bioart/posts/index.html.haml
@@ -20,7 +20,7 @@
   - else
     .row
       .small-10.small-centered.medium-12.columns.section_title
-        News
+        Blog
   .row.small-up-1.medium-up-2.large-up-3#results= render partial: 'posts/postspage'
  
 - if @category
