--- a/app/assets/themes/bioart/stylesheets/base.css.scss
+++ b/app/assets/themes/bioart/stylesheets/base.css.scss
@@ -13,6 +13,35 @@ header {
     @include breakpoint(medium only) {
       padding: 0.25rem 0 0;
     }
+    .search_field {
+      display: none;
+      input[type=text] {
+        float: left;
+        outline: none;
+        box-shadow: none;
+        font-family: $titillium;
+        border: none;
+        height: 2.75rem;
+        padding-left: 20px;
+        background:  url(/assets/bioart/images/layout/mag_glass.png) no-repeat 2px center  #66ffcc;
+        &::-webkit-input-placeholder {font-family: $titillium; color: #000; text-transform: uppercase; 
+         
+        }
+        &::-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase;} 
+        &:-ms-input-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
+        &:input:-moz-placeholder { font-family: $titillium; color: #000; text-transform: uppercase; }
+        
+      }
+    }
+    .search_icon {
+      position: absolute;
+      top: 3px;
+      right: 3px;
+      a i {
+        font-size: 1.5rem;
+        color: black;
+      }
+    }
     a {
       .logo {
         font-family: $rubik;
@@ -72,8 +101,10 @@ header {
 
           padding: 1em 0.7em 1em 2em;
           margin-right: 0.5em;
-          font-size: 0.933em;
-          
+          font-size: 0.933rem;
+          @include breakpoint(small only) {
+            font-size: 0.8rem;
+          }
           text-transform: uppercase;
         }
         &:hover {
