see all blog post styled

--- a/app/assets/themes/bioart/stylesheets/application.css.scss
+++ b/app/assets/themes/bioart/stylesheets/application.css.scss
@@ -39,10 +39,16 @@
 }
 
 
+button.slick-arrow {
+  @include breakpoint(small only) {
+    display: none !important;
+  }
+}
 .slick-next, .slick-prev {
   height: inherit;
   width: inherit;
   top: 64%;
+
 }
 .slick-prev {
   left: -3rem;
