--- a/app/assets/themes/bioart/stylesheets/activities.css.scss
+++ b/app/assets/themes/bioart/stylesheets/activities.css.scss
@@ -82,8 +82,25 @@
   }
   .activity_content {
     padding: 1.875em 2.625em;
+    float: left;
     background-color: white;
     margin-bottom: 2.2rem;
+    p.side_link {
+      float: left;
+      clear: both;
+      margin-bottom: 0.25rem;
+//      background-color: #;
+      background: white url(/assets/bioart/images/layout/menubar_arrow_blk.png)  0.4em no-repeat;
+      border: 1px solid #000;
+      padding: 0.4em 0.4em 0.4em 2em;
+      a {
+        text-transform: uppercase;
+        color: #000;
+        &:hover {
+          color: #C5C5C5;
+        }
+      }
+    }
     .title {
       font-family: $abel;
       font-size: 1.4em;
