--- a/app/assets/themes/bioart/stylesheets/projects.css.scss
+++ b/app/assets/themes/bioart/stylesheets/projects.css.scss
@@ -359,6 +359,13 @@
           line-height: 1.25em;
           color: #000;
         }
+        .index_author {
+          font-family: $titillium;
+          font-size: 0.8em;
+          line-height: 1.1em;
+          color: #666;
+          margin-top: 1.2rem;
+        }
       }
     }
   }
