--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -7,7 +7,8 @@
         %ul
           - @post.errors.full_messages.each do |msg|
             %li= msg
-  
+  .row.expanded
+    .small-12.large-6.columns= f.input :node, input_html: {required: ''}  
   .row.expanded
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}
 
