--- a/app/views/themes/bioart/admin/posts/_form.html.haml
+++ b/app/views/themes/bioart/admin/posts/_form.html.haml
@@ -11,7 +11,8 @@
     .small-12.large-6.columns= f.input :node, input_html: {required: ''}  
   .row.expanded
     .small-12.large-6.columns= f.input :title, input_html: {required: ''}
-
+  .row.expanded
+    .small-12.large-6.columns= f.input :project
   .row.expanded
     .small-12.columns= f.input :body, as: :ckeditor, input_html: {required: ''}
 
